--- a/header cua Khang/style.css
+++ b/header cua Khang/style.css
@@ -170,6 +170,9 @@ nav{
     position: relative;
 }
 .scroll-wrapper{
+    
+}
+.slider-wrapper{
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -178,10 +181,13 @@ nav{
     position: relative;
 }
 .item-wrapper{
+    
+}
+.swiper-slide{
     width:100%;
     text-align: center;
     flex-shrink: 0;
-    margin: 0 1px;
+    /* margin: 0 1px; */
 }
 .banner-img-wrapper{
     height: 0;
