--- a/view/css/output.css
+++ b/view/css/output.css
@@ -600,6 +600,10 @@ video {
   z-index: 50;
 }
 
+.float-left{
+  float: left;
+}
+
 .mx-auto{
   margin-left: auto;
   margin-right: auto;
@@ -758,6 +762,10 @@ video {
   width: 400px;
 }
 
+.w-\[600px\]{
+  width: 600px;
+}
+
 .w-\[70\%\]{
   width: 70%;
 }
@@ -902,6 +910,10 @@ video {
   row-gap: 25px;
 }
 
+.gap-y-10{
+  row-gap: 2.5rem;
+}
+
 .overflow-hidden{
   overflow: hidden;
 }
@@ -983,6 +995,11 @@ video {
 .border-blue-300{
   --tw-border-opacity: 1;
   border-color: rgb(147 197 253 / var(--tw-border-opacity));
+}
+
+.border-gray-300{
+  --tw-border-opacity: 1;
+  border-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
 
 .border-gray-600{
@@ -1264,6 +1281,11 @@ video {
   color: rgb(29 78 216 / var(--tw-text-opacity));
 }
 
+.text-gray-500{
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+
 .text-gray-700{
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
@@ -1289,18 +1311,13 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-gray-500{
-  --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
-}
-
 .opacity-0{
   opacity: 0;
 }
 
-.shadow-\[10px_10px_60px_-15px_rgba\(0\2c 0\2c 0\2c 0\.3\)\]{
-  --tw-shadow: 10px 10px 60px -15px rgba(0,0,0,0.3);
-  --tw-shadow-colored: 10px 10px 60px -15px var(--tw-shadow-color);
+.shadow-\[-5px_5px_15px_2px_rgba\(0\2c 0\2c 0\2c 0\.3\)\]{
+  --tw-shadow: -5px 5px 15px 2px rgba(0,0,0,0.3);
+  --tw-shadow-colored: -5px 5px 15px 2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -1319,114 +1336,6 @@ video {
 .shadow-sm{
   --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
   --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-\[10px_0px_60px_-15px_rgba\(0\2c 0\2c 0\2c 0\.3\)\]{
-  --tw-shadow: 10px 0px 60px -15px rgba(0,0,0,0.3);
-  --tw-shadow-colored: 10px 0px 60px -15px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-\[-10px_0px_60px_-15px_rgba\(0\2c 0\2c 0\2c 0\.3\)\]{
-  --tw-shadow: -10px 0px 60px -15px rgba(0,0,0,0.3);
-  --tw-shadow-colored: -10px 0px 60px -15px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-\[-10px_10px_60px_-15px_rgba\(0\2c 0\2c 0\2c 0\.3\)\]{
-  --tw-shadow: -10px 10px 60px -15px rgba(0,0,0,0.3);
-  --tw-shadow-colored: -10px 10px 60px -15px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-\[-10px_-10px_60px_-15px_rgba\(0\2c 0\2c 0\2c 0\.3\)\]{
-  --tw-shadow: -10px -10px 60px -15px rgba(0,0,0,0.3);
-  --tw-shadow-colored: -10px -10px 60px -15px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-\[-10px_-10px_60px_15px_rgba\(0\2c 0\2c 0\2c 0\.3\)\]{
-  --tw-shadow: -10px -10px 60px 15px rgba(0,0,0,0.3);
-  --tw-shadow-colored: -10px -10px 60px 15px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-\[-10px_-10px_60px_5px_rgba\(0\2c 0\2c 0\2c 0\.3\)\]{
-  --tw-shadow: -10px -10px 60px 5px rgba(0,0,0,0.3);
-  --tw-shadow-colored: -10px -10px 60px 5px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-\[-10px_-10px_6px_5px_rgba\(0\2c 0\2c 0\2c 0\.3\)\]{
-  --tw-shadow: -10px -10px 6px 5px rgba(0,0,0,0.3);
-  --tw-shadow-colored: -10px -10px 6px 5px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-\[-10px_10px_6px_5px_rgba\(0\2c 0\2c 0\2c 0\.3\)\]{
-  --tw-shadow: -10px 10px 6px 5px rgba(0,0,0,0.3);
-  --tw-shadow-colored: -10px 10px 6px 5px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-\[-10px_10px_15px_5px_rgba\(0\2c 0\2c 0\2c 0\.3\)\]{
-  --tw-shadow: -10px 10px 15px 5px rgba(0,0,0,0.3);
-  --tw-shadow-colored: -10px 10px 15px 5px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-\[-10px_10px_50px_5px_rgba\(0\2c 0\2c 0\2c 0\.3\)\]{
-  --tw-shadow: -10px 10px 50px 5px rgba(0,0,0,0.3);
-  --tw-shadow-colored: -10px 10px 50px 5px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-\[-10px_10px_px_5px_rgba\(0\2c 0\2c 0\2c 0\.3\)\]{
-  --tw-shadow: -10px 10px px 5px rgba(0,0,0,0.3);
-  --tw-shadow-colored: -10px 10px 5px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-\[-10px_10px_5px_5px_rgba\(0\2c 0\2c 0\2c 0\.3\)\]{
-  --tw-shadow: -10px 10px 5px 5px rgba(0,0,0,0.3);
-  --tw-shadow-colored: -10px 10px 5px 5px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-\[-10px_10px_5px_10px_rgba\(0\2c 0\2c 0\2c 0\.3\)\]{
-  --tw-shadow: -10px 10px 5px 10px rgba(0,0,0,0.3);
-  --tw-shadow-colored: -10px 10px 5px 10px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-\[-10px_10px_5px_20px_rgba\(0\2c 0\2c 0\2c 0\.3\)\]{
-  --tw-shadow: -10px 10px 5px 20px rgba(0,0,0,0.3);
-  --tw-shadow-colored: -10px 10px 5px 20px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-\[-10px_10px_15px_2px_rgba\(0\2c 0\2c 0\2c 0\.3\)\]{
-  --tw-shadow: -10px 10px 15px 2px rgba(0,0,0,0.3);
-  --tw-shadow-colored: -10px 10px 15px 2px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-\[-10px_5px_15px_2px_rgba\(0\2c 0\2c 0\2c 0\.3\)\]{
-  --tw-shadow: -10px 5px 15px 2px rgba(0,0,0,0.3);
-  --tw-shadow-colored: -10px 5px 15px 2px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-\[5px_5px_15px_2px_rgba\(0\2c 0\2c 0\2c 0\.3\)\]{
-  --tw-shadow: 5px 5px 15px 2px rgba(0,0,0,0.3);
-  --tw-shadow-colored: 5px 5px 15px 2px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-\[-5px_5px_15px_2px_rgba\(0\2c 0\2c 0\2c 0\.3\)\]{
-  --tw-shadow: -5px 5px 15px 2px rgba(0,0,0,0.3);
-  --tw-shadow-colored: -5px 5px 15px 2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -1487,6 +1396,11 @@ video {
   border-radius: 0.5rem;
 }
 
+.hover\:border-blue-500:hover{
+  --tw-border-opacity: 1;
+  border-color: rgb(59 130 246 / var(--tw-border-opacity));
+}
+
 .hover\:bg-black:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
@@ -1522,6 +1436,22 @@ video {
 .hover\:shadow-gray-500:hover{
   --tw-shadow-color: #6b7280;
   --tw-shadow: var(--tw-shadow-colored);
+}
+
+.focus\:border-blue-500:focus{
+  --tw-border-opacity: 1;
+  border-color: rgb(59 130 246 / var(--tw-border-opacity));
+}
+
+.focus\:outline-none:focus{
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+.focus\:ring:focus{
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
 .active\:translate-x-0:active{
