--- a/view/login.html
+++ b/view/login.html
@@ -40,6 +40,26 @@
       </header>
 
       <main class="w-full h-auto py-10">
+        <div class="w-full h-auto flex flex-col justify-center items-center">
+          <form action="/submit_form" method="post" class="relative float-left  flex flex-col">
+            <h1 class="text-center"><b class="text-2xl">ĐĂNG NHẬP TÀI KHOẢN </b> </h1>
+            
+            <input  class="border border-gray-300 px-4 py-2 rounded-md transition duration-300 hover:border-blue-500 focus:outline-none focus:ring focus:border-blue-500 " type="text" id="name" name="name" placeholder="Email"> 
+          
+            <input  class="border border-gray-300 px-4 py-2 rounded-md transition duration-300 hover:border-blue-500 focus:outline-none focus:ring focus:border-blue-500"type="tel" id="phone" name="phone" placeholder="Mật Khẩu"> 
+  
+           
+          
+            <button
+            class="mt-6 text-xl font-bold text-white bg-blue-400 rounded-full py-3 px-6 hover:shadow-mysd duration-300 hover:shadow-gray-500 hover:-translate-y-1 hover:-translate-x-1 active:shadow-none active:translate-y-0 active:translate-x-0"
+          >
+            <a href="">ĐĂNG NHẬP </a>
+          </button>
+            
+            
+          </form>
+
+        </div>
         
       </main>
 
