--- a/view/resign.html
+++ b/view/resign.html
@@ -40,6 +40,28 @@
       </header>
 
       <main class="w-full h-auto py-10">
+        <div class="w-full h-auto flex flex-col justify-center items-center">
+          <form action="/submit_form" method="post" class="   flex flex-col w-[600px] mx-auto gap-y-10   " >
+            <h1 class="text-center"><b class="text-2xl">ĐĂNG KÝ TÀI KHOẢN</b> </h1>
+            <input  class="border border-gray-300 px-4 py-2 rounded-md transition duration-300 hover:border-blue-500 focus:outline-none focus:ring focus:border-blue-500 " type="text" id="name" name="name" placeholder="Họ tên"> 
+          
+            <input  class="border border-gray-300 px-4 py-2 rounded-md transition duration-300 hover:border-blue-500 focus:outline-none focus:ring focus:border-blue-500"type="tel" id="phone" name="phone" placeholder="Số điện thoại"> 
+  
+            <input class="border border-gray-300 px-4 py-2 rounded-md transition duration-300 hover:border-blue-500 focus:outline-none focus:ring focus:border-blue-500" type="email" id="email" name="email" placeholder="Email"> 
+          
+            <input class="border border-gray-300 px-4 py-2 rounded-md transition duration-300 hover:border-blue-500 focus:outline-none focus:ring focus:border-blue-500"  type="password" id="password" name="password" placeholder="Mật khẩu">
+          
+            <button
+            class="mt-6 text-xl font-bold text-white bg-blue-400 rounded-full py-3 px-6 hover:shadow-mysd duration-300 hover:shadow-gray-500 hover:-translate-y-1 hover:-translate-x-1 active:shadow-none active:translate-y-0 active:translate-x-0"
+          >
+            <a href="">ĐĂNG KÝ </a>
+          </button>
+            
+            
+          </form>
+
+        </div>
+       
         
       </main>
 
