--- a/view/myaccount.html
+++ b/view/myaccount.html
@@ -3,8 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../view/css/output.css"/>
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="../view/css/output.css" />
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
 
     <title>Home</title>
   </head>
@@ -33,14 +43,76 @@
             <div>
               <a href=""><img src="../view/img/human.svg" alt="" /></a>
             </div>
-            <div><a href=""></a><img src="../view/img/search.svg" alt="" /></div>
+            <div>
+              <a href=""></a><img src="../view/img/search.svg" alt="" />
+            </div>
             <div><a href=""></a><img src="../view/img/cart.svg" alt="" /></div>
           </div>
         </nav>
       </header>
 
       <main class="w-full h-auto py-10">
-        <!-- code ở đây -->
+        <div class="fixed top-60 left-auto">
+          <div class="mt-6">
+            <a href="#" class="border w-full text-base px-2 py-2 box-border border-black bg-black text-white  font-semibold ">Xem đơn hàng</a>
+          </div>
+      
+          <div class="mt-6">
+            <a href="#" class="border w-full text-base px-2 py-2 box-border border-black bg-black text-white  font-semibold ">Cập nhật tài khoản</a>
+          </div>
+        </div>
+        <div class="flex justify-center items-center w-full">
+          <div class="w-96 p-6 shadow-lg bg-white rounded-md">
+            <h1 class="text-3xl block text-center font-semibold mb-12">
+              Tài Khoản Của Bạn
+            </h1>
+           
+            <div class="mt-3">
+              <label for="username" class="block text-base mb-2">
+                Họ và tên
+              </label>
+              <input
+                type="text"
+                id="username"
+                class="border w-full text-base px-2 py-2 focus:outline-none focus:ring-0 focus:border-gray-1000 rounded-md"
+                placeholder="Trần An Huy"
+              />
+            </div>
+
+            <div class="mt-3">
+              <label for="email" class="block text-base mb-2"> Gmail </label>
+              <input
+                type="email"
+                id="email"
+                class="border w-full text-base px-2 py-2 focus:outline-none focus:ring-0 focus:border-gray-1000 rounded-md"
+                placeholder="huy@gmail.com"
+              />
+            </div>
+
+            <div class="mt-3">
+              <label for="phone" class="block text-base mb-2">
+                Số điện thoại
+              </label>
+              <input
+                type="text"
+                id="phone"
+                class="border w-full text-base px-2 py-2 focus:outline-none focus:ring-0 focus:border-gray-1000 rounded-md"
+                placeholder="0123456789"
+              />
+            </div>
+
+            <div class="mt-3">
+              <label for="adress" class="block text-base mb-2"> Địa chỉ </label>
+              <input
+                type="text"
+                id="adress"
+                class="border w-full text-base px-2 py-2 focus:outline-none focus:ring-0 focus:border-gray-1000 rounded-md"
+                placeholder="Quận 12"
+              />
+            </div>
+          </div>
+        </div>
+        
       </main>
 
       <footer class="w-full py-5 px-5 bg-[#333333] text-[#FFFFFF]">
@@ -158,6 +230,6 @@
     </div>
     <!-- thằng cha -->
 
-<script src="../view/js/index.js"></script>
+    <script src="../view/js/index.js"></script>
   </body>
 </html>
