--- a/view/myaccount_confirm.html
+++ b/view/myaccount_confirm.html
@@ -40,7 +40,68 @@
       </header>
 
       <main class="w-full h-auto py-10">
-        <!-- code ở đây -->
+        <div class="flex justify-center items-center w-full">
+          <div class="w-96 p-6 shadow-lg bg-white rounded-md">
+            <h1 class="text-3xl block text-center font-semibold mb-12">
+              Cập nhật thông tin
+            </h1>
+            <hr / class="mt-3">
+            <div class="mt-3">
+              <label for="username" class="block text-base mb-2">
+                Họ và tên
+              </label>
+              <input
+                type="text"
+                id="username"
+                class="border w-full text-base px-2 py-2 focus:outline-none focus:ring-0 focus:border-gray-1000 rounded-md"
+                placeholder="Trần An Huy"
+              />
+            </div>
+
+            <div class="mt-3">
+              <label for="email" class="block text-base mb-2"> Gmail </label>
+              <input
+                type="email"
+                id="email"
+                class="border w-full text-base px-2 py-2 focus:outline-none focus:ring-0 focus:border-gray-1000 rounded-md"
+                placeholder="huy@gmail.com"
+              />
+            </div>
+
+            <div class="mt-3">
+              <label for="phone" class="block text-base mb-2">
+                Số điện thoại
+              </label>
+              <input
+                type="text"
+                id="phone"
+                class="border w-full text-base px-2 py-2 focus:outline-none focus:ring-0 focus:border-gray-1000 rounded-md"
+                placeholder="0123456789"
+              />
+            </div>
+
+            <div class="mt-3">
+              <label for="adress" class="block text-base mb-2"> Địa chỉ </label>
+              <input
+                type="text"
+                id="adress"
+                class="border w-full text-base px-2 py-2 focus:outline-none focus:ring-0 focus:border-gray-1000 rounded-md"
+                placeholder="Quận 12"
+              />
+            </div>
+
+            
+
+            <div class="mt-5">
+              <button
+                type="submit"
+                class="border-2 border-indigo-700 bg-indigo-700 text-white py-1 w-full rounded-full hover:bg-transparent hover:text-indigo-700 font-semibold"
+              >
+                Hoàn tất
+              </button>
+            </div>
+          </div>
+        </div>
       </main>
 
       <footer class="w-full py-5 px-5 bg-[#333333] text-[#FFFFFF]">
