--- a/view/login.html
+++ b/view/login.html
@@ -165,7 +165,7 @@
               <input
                 class="bg-input-footer w-full h-12 rounded-[4px] px-4"
                 placeholder="Gõ vô đây"
-                type="text"
+                type="text" required
               />
               <button
                 type="submit"
