--- a/view/checkout.html
+++ b/view/checkout.html
@@ -43,18 +43,65 @@
         <section class="w-[1240px] mx-auto">
             <div class="w-full flex gap-x-[50px]">
                 <!-- form -->
-                <div class="w-[70%] p-5  rounded-lg shadow-lg">
-                    <form class="w-full">
-                        <!-- vieets voo ddaay -->
+                <div class="w-[60%] p-5  rounded-lg shadow-lg">
+                    <form class="flex flex-col w-[600px] mx-auto gap-y-10 gap-4 ">
+                      
+                      
+                      <h1 class="text-center text-xl ">  <b>THÔNG TIN NGƯỜI ĐẶT HÀNG </b>  </h1>
+                        <input  class="border border-gray-300 px-4 py-2 rounded-md transition duration-300 hover:border-blue-500 focus:outline-none focus:ring focus:border-blue-500 " type="text" id="name" name="name" placeholder="Họ tên"> 
+                        <input  class="border border-gray-300 px-4 py-2 rounded-md transition duration-300 hover:border-blue-500 focus:outline-none focus:ring focus:border-blue-500 " type="email" id="Email" name="Email" placeholder="Email"> 
+                        <input  class="border border-gray-300 px-4 py-2 rounded-md transition duration-300 hover:border-blue-500 focus:outline-none focus:ring focus:border-blue-500 " type="text" id="sdt" name="sdt" placeholder="Số điện thoại"> 
+                        <input  class="border border-gray-300 px-4 py-2 rounded-md transition duration-300 hover:border-blue-500 focus:outline-none focus:ring focus:border-blue-500 " type="text" id="diachi" name="diachi" placeholder="Địa chỉ "> 
+                        <h1 class="text-center text-xl ">  <b>THÔNG TIN NGƯỜI NHẬN HÀNG</b>  </h1>
+                        <input  class="border border-gray-300 px-4 py-2 rounded-md transition duration-300 hover:border-blue-500 focus:outline-none focus:ring focus:border-blue-500 " type="text" id="name" name="name" placeholder="Họ tên"> 
+                        <input  class="border border-gray-300 px-4 py-2 rounded-md transition duration-300 hover:border-blue-500 focus:outline-none focus:ring focus:border-blue-500 " type="text" id="sdt" name="sdt" placeholder="Số điện thoại"> 
+                        <input  class="border border-gray-300 px-4 py-2 rounded-md transition duration-300 hover:border-blue-500 focus:outline-none focus:ring focus:border-blue-500 " type="text" id="diachi" name="diachi" placeholder="Địa chỉ "> 
+
+                      
+                        
 
                     </form>
                 </div>
 
                 <!-- cart -->
-                <div class="w-[calc(30%-50px)] p-5  rounded-lg shadow-[-5px_5px_15px_2px_rgba(0,0,0,0.3)]">
+                <div class="w-[calc(40%-50px)] p-5  rounded-lg shadow-[-5px_5px_15px_2px_rgba(0,0,0,0.3)]">
                     <div class="w-full"> 
-                        <!-- vieets voo ddaay -->
-                    </div>
+                      <h1 class="text-center text-xl"><b>GIỎ HÀNG </b> </h1>       
+                      <div class="space-y-4 ">
+                        <div class="w-50 border rounded border-black grid grid-cols-2">
+                          <div><img class="pt-5 pb-5 w-24" src="/view/img/iphone15.png" alt=""></div> 
+                          <div> <h1 class="text-center text-xl ">  <b>  Iphone 15 promax 256GB </b>  </h1>
+                          <div class="grid grid-cols-2 pr-6 pb-5">
+                            <div class="pt-20 text-xl"> x1 </div>
+                            <div class="pt-20  text-lg"> 39.000.000đ</div>
+
+                          </div>
+                          </div>                      
+                        </div>        
+                      </div> 
+                       <div class="mt-40">
+                        <h1 class="text-center text-xl"><b>PHƯƠNG THỨC THANH TOÁN </b> </h1>   
+                       <div class="space-y-4 ">
+                        <div class="w-50 border rounded border-black grid grid-cols-4">
+                          <div class="pt-3 pl-5 w-10"><i class="  fa-regular fa-circle"></i></div>
+                          <div class="col-start-2 col-span-2 mr-20 ">Thanh toán khi nhận hàng </div>
+                          <div class="text-lg pl-14 col-end-5 col-span-2">39.000.000đ</div>
+                          <div class="text-gray-400 col-start-2 col-span-2">từ 2-3 ngày </div>
+                       </div>
+                       
+                          
+                                           
+                        </div>        
+                      </div> 
+                      <div class="flex flex-col mt-5 text-center">
+                        <button
+                        class="uppercase w-fit mx-auto mt-6 text-xl font-bold text-white bg-black rounded-md py-3 px-6 hover:shadow-mysd duration-300 hover:shadow-gray-500 hover:-translate-y-1 hover:-translate-x-1 active:shadow-none active:translate-y-0 active:translate-x-0 justify-center">
+                      ĐẶT HÀNG 
+                    </button>
+                      </div>
+                   
+
+
                 </div>
             </div>
         </section>
@@ -176,5 +223,7 @@
     <!-- thằng cha -->
 
 <script src="../view/js/index.js"></script>
+<script src="https://kit.fontawesome.com/b6ba74cce9.js" crossorigin="anonymous"></script>
+
   </body>
 </html>
