--- a/view/css/output.css
+++ b/view/css/output.css
@@ -580,10 +580,6 @@ video {
   left: 230px;
 }
 
-.left-auto{
-  left: auto;
-}
-
 .right-0{
   right: 0px;
 }
@@ -596,16 +592,24 @@ video {
   top: 50%;
 }
 
-.top-60{
-  top: 15rem;
-}
-
 .z-10{
   z-index: 10;
 }
 
 .z-50{
   z-index: 50;
+}
+
+.col-span-2{
+  grid-column: span 2 / span 2;
+}
+
+.col-start-2{
+  grid-column-start: 2;
+}
+
+.col-end-5{
+  grid-column-end: 5;
 }
 
 .mx-auto{
@@ -616,10 +620,6 @@ video {
 .my-0{
   margin-top: 0px;
   margin-bottom: 0px;
-}
-
-.mb-12{
-  margin-bottom: 3rem;
 }
 
 .mb-2{
@@ -682,16 +682,24 @@ video {
   margin-top: 2.25rem;
 }
 
-.box-border{
-  box-sizing: border-box;
+.mt-20{
+  margin-top: 5rem;
+}
+
+.mr-20{
+  margin-right: 5rem;
+}
+
+.mt-32{
+  margin-top: 8rem;
+}
+
+.mt-40{
+  margin-top: 10rem;
 }
 
 .box-content{
   box-sizing: content-box;
-}
-
-.block{
-  display: block;
 }
 
 .flex{
@@ -742,6 +750,10 @@ video {
   height: 100%;
 }
 
+.w-10{
+  width: 2.5rem;
+}
+
 .w-12{
   width: 3rem;
 }
@@ -750,8 +762,8 @@ video {
   width: 5rem;
 }
 
-.w-96{
-  width: 24rem;
+.w-24{
+  width: 6rem;
 }
 
 .w-\[1240px\]{
@@ -790,6 +802,14 @@ video {
   width: 400px;
 }
 
+.w-\[60\%\]{
+  width: 60%;
+}
+
+.w-\[600px\]{
+  width: 600px;
+}
+
 .w-\[70\%\]{
   width: 70%;
 }
@@ -802,8 +822,8 @@ video {
   width: calc(30% - 40px);
 }
 
-.w-\[calc\(30\%-50px\)\]{
-  width: calc(30% - 50px);
+.w-\[calc\(40\%-50px\)\]{
+  width: calc(40% - 50px);
 }
 
 .w-auto{
@@ -817,6 +837,14 @@ video {
 
 .w-full{
   width: 100%;
+}
+
+.w-7{
+  width: 1.75rem;
+}
+
+.w-11{
+  width: 2.75rem;
 }
 
 .max-w-\[400px\]{
@@ -840,6 +868,10 @@ video {
 
 .cursor-pointer{
   cursor: pointer;
+}
+
+.grid-cols-2{
+  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
 .grid-cols-4{
@@ -927,6 +959,10 @@ video {
   row-gap: 0.25rem;
 }
 
+.gap-y-10{
+  row-gap: 2.5rem;
+}
+
 .gap-y-3{
   row-gap: 0.75rem;
 }
@@ -943,12 +979,22 @@ video {
   row-gap: 25px;
 }
 
+.space-y-4 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+}
+
 .overflow-hidden{
   overflow: hidden;
 }
 
 .overflow-x-auto{
   overflow-x: auto;
+}
+
+.rounded{
+  border-radius: 0.25rem;
 }
 
 .rounded-3xl{
@@ -1036,11 +1082,6 @@ video {
   border-color: rgb(75 85 99 / var(--tw-border-opacity));
 }
 
-.border-indigo-700{
-  --tw-border-opacity: 1;
-  border-color: rgb(67 56 202 / var(--tw-border-opacity));
-}
-
 .bg-\[\#333333\]{
   --tw-bg-opacity: 1;
   background-color: rgb(51 51 51 / var(--tw-bg-opacity));
@@ -1084,11 +1125,6 @@ video {
 .bg-gray-300{
   --tw-bg-opacity: 1;
   background-color: rgb(209 213 219 / var(--tw-bg-opacity));
-}
-
-.bg-indigo-700{
-  --tw-bg-opacity: 1;
-  background-color: rgb(67 56 202 / var(--tw-bg-opacity));
 }
 
 .bg-input-footer{
@@ -1213,12 +1249,28 @@ video {
   padding-left: 2.5rem;
 }
 
+.pl-14{
+  padding-left: 3.5rem;
+}
+
 .pl-2{
   padding-left: 0.5rem;
 }
 
+.pl-5{
+  padding-left: 1.25rem;
+}
+
 .pr-6{
   padding-right: 1.5rem;
+}
+
+.pt-20{
+  padding-top: 5rem;
+}
+
+.pt-3{
+  padding-top: 0.75rem;
 }
 
 .pt-5{
@@ -1240,11 +1292,6 @@ video {
 .text-2xl{
   font-size: 1.5rem;
   line-height: 2rem;
-}
-
-.text-3xl{
-  font-size: 1.875rem;
-  line-height: 2.25rem;
 }
 
 .text-4xl{
@@ -1323,6 +1370,11 @@ video {
 .text-blue-700{
   --tw-text-opacity: 1;
   color: rgb(29 78 216 / var(--tw-text-opacity));
+}
+
+.text-gray-400{
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 
 .text-gray-500{
@@ -1466,18 +1518,9 @@ video {
   background-color: rgb(219 234 254 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-transparent:hover{
-  background-color: transparent;
-}
-
 .hover\:text-blue-700:hover{
   --tw-text-opacity: 1;
   color: rgb(29 78 216 / var(--tw-text-opacity));
-}
-
-.hover\:text-indigo-700:hover{
-  --tw-text-opacity: 1;
-  color: rgb(67 56 202 / var(--tw-text-opacity));
 }
 
 .hover\:text-white:hover{
@@ -1515,12 +1558,6 @@ video {
 .focus\:ring:focus{
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
-  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-}
-
-.focus\:ring-0:focus{
-  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
-  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
