--- a/view/checkout.html
+++ b/view/checkout.html
@@ -43,7 +43,7 @@
         <section class="w-[1240px] mx-auto">
             <div class="w-full flex gap-x-[50px]">
                 <!-- form -->
-                <div class="w-[60%] p-5  rounded-lg shadow-lg">
+                <div class="w-[60%] p-5  rounded-lg shadow-[-5px_5px_15px_2px_rgba(0,0,0,0.3)]">
                     <form class="flex flex-col w-[600px] mx-auto gap-y-10 gap-4 ">
                       
                       
@@ -80,7 +80,7 @@
                         </div>        
                       </div> 
                        <div class="mt-40">
-                        <h1 class="text-center text-xl"><b>PHƯƠNG THỨC THANH TOÁN </b> </h1>   
+                        <h1 class="text-center text-xl"><b>PHƯƠNG THỨC THANH TOÁN </b> </h1>  <br> 
                        <div class="space-y-4 ">
                         <div class="w-50 border rounded border-black grid grid-cols-4">
                           <div class="pt-3 pl-5 w-10"><i class="  fa-regular fa-circle"></i></div>
